issue #2420 editor overflow

--- a/extension/css/cryptup.css
+++ b/extension/css/cryptup.css
@@ -1842,6 +1842,7 @@ table#compose td.text div.text_container {
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-height: -webkit-fill-available; /* https://github.com/FlowCrypt/flowcrypt-browser/issues/2420 */
   overflow-x: hidden;
   background-image: url(/img/lock-seamless-bg-alpha.png);
 }
